# grad-ui

./: README.md  com.github.grad.json  meson.build
data/: com.github.grad.desktop.in  com.github.grad.gschema.xml  com.github.grad.metainfo.xml.in  com.github.grad.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: grad-application.c  grad-application.h  grad-templates.ui  grad-window.c  grad-window.h  grad-window.ui  grad.gresource.xml  main.c  meson.build  style.css
